--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body, html {
 }
 
 /* Boîte animée avec keyframes */
-.bouncing-box {
+.bouncing {
     width: 100px;
     height: 100px;
     background-color: #FFB677;
